--- a/uebung1-loesung.ipynb
+++ b/uebung1-loesung.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -36,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -86,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -119,7 +125,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -131,7 +139,7 @@
    "source": [
     "### Aufgabe 3\n",
     "\n",
-    "Lösen Sie das das folgende Gleichungssystem\n",
+    "Lösen Sie das das folgende lineare Gleichungssystem (LGS)\n",
     "\n",
     "\n",
     "$$\n",
@@ -166,7 +174,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -208,8 +218,10 @@
     "\n",
     "y = np.array([-16,  50, -14])\n",
     "\n",
+    "# LGS lösen\n",
     "x = np.linalg.solve(A, y) ##:\n",
     "\n",
+    "# Probe ob die Lösung stimmt (@-Operator für Matrix-Multiplikation)\n",
     "A@x-y ##:"
    ]
   },
@@ -230,7 +242,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -408,7 +422,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "omega = np.logspace(-3, 3, 1000)\n",
@@ -421,7 +437,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -458,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
