--- a/uebung1.ipynb
+++ b/uebung1.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -36,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -56,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -66,7 +72,7 @@
    "source": [
     "### Aufgabe 3\n",
     "\n",
-    "Lösen Sie das das folgende Gleichungssystem\n",
+    "Lösen Sie das das folgende lineare Gleichungssystem (LGS)\n",
     "\n",
     "\n",
     "$$\n",
@@ -92,13 +98,17 @@
     "\n",
     "$$\n",
     "\\mathbf{A}\\cdot \\mathbf{x}- \\mathbf{y} \\stackrel{!}{=} \\mathbf{0}.\n",
-    "$$"
+    "$$\n",
+    "\n",
+    "Hinweis: `np.linalg.solve?` (Das Fragezeichen bewirkt, dass der Doc-String der Funktion `solve` als Hilfe angezeigt wird)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -119,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -137,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -158,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.4.2"
   }
  },
  "nbformat": 4,
